--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap');
 ::-webkit-scrollbar {
   display: none;
 }
+#app {
+  font-family: 'Orbitron', sans-serif;
+}
 
 body {
-  font-family: sans-serif;
+  font-family: 'Orbitron', sans-serif;
   display: grid;
   height: 100vh;
   place-items: center;
