--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -2,6 +2,16 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+:root {
+  --dark-purp: #2e2a5d;
+  --light-purp: #7c52a8;
+  --dark-cyan: #0e5d77;
+  --mid-cyan: #068592;
+  --light-cyan: #5feaf8;
+  --blue: #156cdb;
+}
+
 #app {
   font-family: 'Orbitron', sans-serif;
 }
@@ -29,34 +39,36 @@ body {
 }
 
 .base-timer__path-elapsed {
-  stroke-width: 7px;
-  stroke: grey;
+  stroke-width: 6px;
+  stroke: #7c52a8;
+  stroke-opacity:.3;
 }
 
 .base-timer__path-remaining {
-  stroke-width: 7px;
+  stroke-width: 6px;
   stroke-linecap: round;
   transform: rotate(90deg);
   transform-origin: center;
   transition: 1s linear all;
   fill-rule: nonzero;
   stroke: currentColor;
+  z-index: 999;
 }
 
 .base-timer__path-remaining.green {
-  color: rgb(65, 184, 131);
+  color: #5feaf8;
 }
 
 .base-timer__path-remaining.orange {
-  color: orange;
+  color: #156cdb;
 }
 
 .base-timer__path-remaining.red {
-  color: red;
+  color: #0e5d77;
 }
 
 .base-timer__label {
-  color:white;
+  color:#068592;
   position: absolute;
   width: 250px;
   height: 250px;
@@ -65,4 +77,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 30px;
+  background-color: #2e2a5d;
+  border-radius: 141px;
+  z-index: 90;
 }
