--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -66,11 +66,22 @@ body {
   color: var(--neon-pink);
 }
 
-.base-timer__label {
+#base-timer-label {
   color:var(--neon-pink);
   position: absolute;
   width: 250px;
   height: 250px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 35px;
+}
+
+.current-phase {
+  position: absolute;
+  width: 250px;
+  height: 128px;
   top: 0;
   display: flex;
   align-items: center;
