--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -88,3 +88,24 @@ body {
   justify-content: center;
   font-size: 23px;
 }
+
+/* experimental transitions */
+.transition-container {
+  /* clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); */
+}
+
+.fadeOne-enter-active, .fadeOne-leave-active {
+  transition: all .5s ease-out;
+}
+.fadeOne-enter, .fadeOne-leave-to {
+  /* clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%); */
+  transform: translate(0%, 100%);
+}
+
+.fadeTwo-enter-active, .fadeTwo-leave-active {
+  transition: all .5s ease-out;
+}
+.fadeTwo-enter, .fadeTwo-leave-to {
+  /* clip-path: polygon(0% 100%, 100% 100%, 0% 100%, 0% 100%); */
+  transform: translate(0%, -100%);
+}
