--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -87,6 +87,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 23px;
+  color:white;
 }
 
 /* experimental transitions */
