--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -92,6 +92,18 @@ body {
   cursor:pointer;
 }
 
+.round-counter {
+  position: absolute;
+  width: 250px;
+  height: 100px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 19px;
+  color:white;
+  cursor:pointer;
+}
 /* experimental transitions */
 /* .transition-container {
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
