added correct time to phases

--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -67,7 +67,7 @@ body {
 }
 
 #base-timer-label {
-  color:var(--neon-pink);
+  /* color:var(--neon-pink); */
   position: absolute;
   width: 250px;
   height: 213px;
