--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -44,7 +44,7 @@ body {
   stroke-opacity:.5;
 }
 
-.base-timer__path-remaining {
+path.base-timer__path-remaining {
   stroke-width: 6px;
   stroke-linecap: round;
   transform: rotate(90deg);
