background color included to prevent relying of background color changes to application. We will see if change needed.

--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -27,6 +27,8 @@ body {
   position: relative;
   width: 250px;
   height: 250px;
+  border-radius: 125px;
+  background-color: #34383d;
 }
 
 .base-timer__svg {
