--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -4,8 +4,8 @@
 }
 
 :root {
-  --neon-pink: #ff00c1;
-  --light-purp:  	#9600ff;
+  --neon-pink: #E800AF;
+  --light-purp:  	#BF00D7;
   --dark-purp: #4900ff;
   --mid-cyan: #00b8ff;
   --light-cyan: #00fff9;
