--- a/src/assets/styles/pickTime.css
+++ b/src/assets/styles/pickTime.css
@@ -1,11 +1,7 @@
-#app {
-  font-family: 'Orbitron', sans-serif;
+<style>
+.v-card--reveal {
+  bottom: 0;  
+  opacity: .5;
+  width: 100%;
 }
-
-body {
-  font-family: 'Orbitron', sans-serif;
-  display: grid;
-  height: 100vh;
-  place-items: center;
-  overflow-y: hidden;
-}
+</style>
