Changed UserSelect view to look more like the picktime component. Changed the bin icon to a 3 dot vertical icon instead. To edit username or delete username later on

--- a/src/assets/styles/userSelect.css
+++ b/src/assets/styles/userSelect.css
@@ -9,3 +9,7 @@
 .titles {
     color: var(--settings-pink) !important;
 }
+
+.v-progress-linear .v-progress-linear__indeterminate .long, .v-progress-linear .v-progress-linear__indeterminate .short {
+  background-color: var(--settings-cyan) !important;
+}
