--- a/src/assets/styles/globalVariables.css
+++ b/src/assets/styles/globalVariables.css
@@ -23,5 +23,5 @@ body {
   font-family: 'Orbitron', sans-serif;
   height: 100vh;
   place-items: center;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
